Updated title to CanWeTalk

--- a/Chat_app/templates/index.html
+++ b/Chat_app/templates/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Chat App</title>
+    <title>CanWeTalk Chat</title>
 </head>
 <body>
-<h1>My Chat App</h1>
+<h1>CanWeTalk Chat
 <form action="/chat">
     <div>
         <label>Enter your username:</label>
