--- a/flaskBoilerplate/app/home/templates/index.html
+++ b/flaskBoilerplate/app/home/templates/index.html
@@ -16,62 +16,27 @@
                 <div class="page-wrapper">
                     <!-- [ Main Content ] start -->
                     <div class="row">
-                        <!--[ daily sales section ] start-->
-                        <div class="col-md-6 col-xl-4">
-                            <div class="card daily-sales">
-                                <div class="card-block">
-                                    <h6 class="mb-4">Daily Sales</h6>
-                                    <div class="row d-flex align-items-center">
-                                        <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center m-b-0"><i class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 249.95</h3>
-                                        </div>
-
-                                        <div class="col-3 text-right">
-                                            <p class="m-b-0">67%</p>
-                                        </div>
-                                    </div>
-                                    <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--[ daily sales section ] end-->
-                        <!--[ Monthly  sales section ] starts-->
-                        <div class="col-md-6 col-xl-4">
-                            <div class="card Monthly-sales">
-                                <div class="card-block">
-                                    <h6 class="mb-4">Monthly Sales</h6>
-                                    <div class="row d-flex align-items-center">
-                                        <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-arrow-down text-c-red f-30 m-r-10"></i>$ 2.942.32</h3>
-                                        </div>
-                                        <div class="col-3 text-right">
-                                            <p class="m-b-0">36%</p>
-                                        </div>
-                                    </div>
-                                    <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <!--[ Monthly  sales section ] end-->
                         <!--[ year  sales section ] starts-->
                         <div class="col-md-12 col-xl-4">
                             <div class="card yearly-sales">
                                 <div class="card-block">
-                                    <h6 class="mb-4">Yearly Sales</h6>
                                     <div class="row d-flex align-items-center">
                                         <div class="col-9">
-                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 8.638.32</h3>
-                                        </div>
-                                        <div class="col-3 text-right">
-                                            <p class="m-b-0">80%</p>
+                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather icon-check text-c-green f-30 m-r-10"></i>
+                                             CanWeTalk <br> </br>Welcome to Admin Dashboard</h3>
                                         </div>
                                     </div>
-                                    <div class="progress m-t-30" style="height: 7px;">
-                                        <div class="progress-bar progress-c-theme" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+
+                            <div class="card yearly-sales">
+                                <div class="card-block">
+                                    <div class="row d-flex align-items-center">
+                                        <div class="col-9">
+                                            <h3 class="f-w-300 d-flex align-items-center  m-b-0">
+                                             Upcoming Appointments</h3>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +46,7 @@
                         <div class="col-xl-8 col-md-6">
                             <div class="card Recent-Users">
                                 <div class="card-header">
-                                    <h5>Recent Users</h5>
+                                    <h5>Student Appointments</h5>
                                 </div>
                                 <div class="card-block px-0 py-3">
                                     <div class="table-responsive">
@@ -154,15 +119,7 @@
                         <div class="col-xl-4 col-md-6">
                             <div class="card card-event">
                                 <div class="card-block">
-                                    <div class="row align-items-center justify-content-center">
-                                        <div class="col">
-                                            <h5 class="m-0">Upcoming Event</h5>
-                                        </div>
-                                        <div class="col-auto">
-                                            <label class="label theme-bg2 text-white f-14 f-w-400 float-right">34%</label>
-                                        </div>
-                                    </div>
-                                    <h2 class="mt-3 f-w-300">45<sub class="text-muted f-14">Competitors</sub></h2>
+                                    <h2 class="mt-3 f-w-300">ADD DATA HERE<sub class="text-muted f-14">Students</sub></h2>
                                     <h6 class="text-muted mt-4 mb-0">You can participate in event </h6>
                                     <i class="fab fa-angellist text-c-purple f-50"></i>
                                 </div>
@@ -174,8 +131,8 @@
                                             <i class="feather icon-zap f-30 text-c-green"></i>
                                         </div>
                                         <div class="col">
-                                            <h3 class="f-w-300">235</h3>
-                                            <span class="d-block text-uppercase">TOTAL IDEAS</span>
+                                            <h3 class="f-w-300">123</h3>
+                                            <span class="d-block text-uppercase">Completed appointments</span>
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +143,7 @@
                                         </div>
                                         <div class="col">
                                             <h3 class="f-w-300">26</h3>
-                                            <span class="d-block text-uppercase">TOTAL LOCATIONS</span>
+                                            <span class="d-block text-uppercase">Open appointments</span>
                                         </div>
                                     </div>
                                 </div>
