--- a/flaskBoilerplate/app/home/templates/studentPage.html
+++ b/flaskBoilerplate/app/home/templates/studentPage.html
@@ -37,11 +37,11 @@
                                     <img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">
                                     <h3 >NAME's Profile</h3>
                                     <p class="text-dark mb-1"> Age: 20</p>
-                                    Gender: Female
-                                    <br></br>
-                                    Mental Health Concern: Depression, Anxiety
-                                    Councellor Evaluation: Last
-                                    Mental Status: <button type="button" class="btn btn-success">Stable <span class="badge badge-light"></span></button>
+                                    <p class="text-dark mb-1">Gender: Female</p>
+                                    <p class="text-dark mb-1">Mental Health Concern: Depression, Anxiety</p>
+                                    <p class="text-dark mb-1">Councellor Evaluation: Last</p>
+                                    <p class="text-dark mb-1">Mental Status: </p>
+                                    <button type="button" class="btn btn-success">Stable <span class="badge badge-light"></span></button>
                                 </div>
                                 <div class="card-block">
                                     <!-- will be N/A if councellor hasn't made evaluation -->
