--- a/flaskBoilerplate/app/base/templates/includes/sidebar.html
+++ b/flaskBoilerplate/app/base/templates/includes/sidebar.html
@@ -67,6 +67,13 @@
                     <li data-username="Sample Page" class="nav-item {% if 'page-blank' in segment %} active {% endif %}">
                         <a href="/page-blank.html" class="nav-link">
                             <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample page</span></a></li>
+                    <li data-username="Search Student" class="nav-item {% if 'page-blank' in segment %} active {% endif %}">
+                        <a href="/studentPage.html" class="nav-link">
+                            <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Student Profile</span></a></li>
+                    <li data-username="Search Student" class="nav-item {% if 'page-blank' in segment %} active {% endif %}">
+                        <a href="/searchStudent.html" class="nav-link">
+                            <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Search Student</span></a></li>
+        
 
                     <li data-username="Disabled Menu" class="nav-item">
                         <a href={{ url_for('base_blueprint.logout') }} class="nav-link">
