--- a/Chat_app/templates/style.css
+++ b/Chat_app/templates/style.css
@@ -15,3 +15,9 @@ body {
     font-size:10px;
     font-family:Arial, Helvetica, sans-serif;
   }
+
+script {
+  color:white;
+  font-size:12px;
+  font-family:Arial, Helvetica, sans-serif;
+}
